[gd_scene load_steps=7 format=3 uid="uid://b2mycas1350is"]

[ext_resource type="Script" uid="uid://j7ubkoc18drp" path="res://src/ground/ground.gd" id="1_nuqmq"]
[ext_resource type="Texture2D" uid="uid://b8j60mx7mh5in" path="res://res/sprites/world/background/forest/layer_2.png" id="2_4esli"]
[ext_resource type="Texture2D" uid="uid://dpi8mly853xcm" path="res://res/sprites/world/background/forest/layer_1.png" id="3_7oe52"]
[ext_resource type="Script" uid="uid://d1f017g6tmhbx" path="res://src/ground/mob_spawner.gd" id="3_72038"]
[ext_resource type="TileSet" uid="uid://sed48abpd3bl" path="res://res/sprites/tileset/world_tileset.tres" id="4_4esli"]
[ext_resource type="Script" uid="uid://ccmbd5ksn5bub" path="res://src/ground/item_spawner.gd" id="4_72038"]

[node name="Ground" type="Node2D"]
script = ExtResource("1_nuqmq")

[node name="Layers" type="Node2D" parent="."]

[node name="NightSky" type="Parallax2D" parent="Layers"]
repeat_size = Vector2(640, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="Layers/NightSky"]
modulate = Color(1, 1, 1, 0)
light_mask = 0
position = Vector2(-40.613045, -7.8048954)
centered = false

[node name="Layer_2" type="Parallax2D" parent="Layers"]
repeat_size = Vector2(640, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="Layers/Layer_2"]
light_mask = 2
texture = ExtResource("2_4esli")
centered = false

[node name="Layer_1" type="Parallax2D" parent="Layers"]
repeat_size = Vector2(640, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="Layers/Layer_1"]
light_mask = 2
texture = ExtResource("3_7oe52")
centered = false

[node name="Tile_0" type="TileMapLayer" parent="."]
tile_set = ExtResource("4_4esli")

[node name="Tile_1" type="TileMapLayer" parent="."]
tile_set = ExtResource("4_4esli")

[node name="MobSpawner" type="Node2D" parent="."]
script = ExtResource("3_72038")

[node name="RayCast2D" type="RayCast2D" parent="MobSpawner"]
position = Vector2(0, -6)
target_position = Vector2(0, 30)
hit_from_inside = true

[node name="ItemSpawner" type="Node2D" parent="."]
script = ExtResource("4_72038")

[node name="ItemSpawnCD" type="Timer" parent="ItemSpawner"]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="ItemSpawner/ItemSpawnCD" to="." method="_on_item_spawn_cd_timeout"]
